tests/invalid/Assign_Invalid_2.whiley
import * from whiley.lang.*

function f(int x) -> bool:
    return x
